vercel analytics + wrapping error fix

--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -11,10 +11,11 @@
     color: white;
 
     h1 {
-        margin-right: 81vw;
+        margin-right: 35vw;
         font-size: 5vw;
         font-weight: 300;
         display: inline;
+        white-space: nowrap;
 
         .info {
             color: rgb(177, 175, 175);
